[gd_scene load_steps=13 format=3 uid="uid://daac8lxg6t80r"]

[ext_resource type="Script" path="res://scenes/creature/piece/piece.gd" id="1_34xuo"]
[ext_resource type="Script" path="res://scenes/game/c_tooltip.gd" id="2_wc04y"]
[ext_resource type="Texture2D" uid="uid://dd84vohc6nhgw" path="res://scenes/creature/piece/selected.png" id="9_kf0ku"]
[ext_resource type="Texture2D" uid="uid://jvdecp57b6c0" path="res://scenes/creature/piece/health_bar.png" id="10_axav6"]
[ext_resource type="Texture2D" uid="uid://bnf7vsugb8mkk" path="res://scenes/creature/piece/health_full.png" id="11_lfhmi"]
[ext_resource type="FontFile" uid="uid://ysctpo7l0nbu" path="res://global/theme/numbers.png" id="12_y2i7d"]
[ext_resource type="Script" path="res://scenes/wiki/c_wiki_link.gd" id="13_0urni"]
[ext_resource type="Texture2D" uid="uid://dy8438wh7q233" path="res://scenes/creature/piece/action_point_used.png" id="13_6k2o5"]
[ext_resource type="Texture2D" uid="uid://c6wcj117tf7ux" path="res://scenes/creature/piece/action_point.png" id="13_ytyrs"]

[sub_resource type="Animation" id="Animation_gukkt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, -45)]
}

[sub_resource type="Animation" id="Animation_nmpwc"]
resource_name = "flash"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(0.968627, 0.74902, 0.282353, 1), Color(0.870588, 0.380392, 0.223529, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(29.5, -48), Vector2(30, -44)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kiqkk"]
_data = {
"RESET": SubResource("Animation_gukkt"),
"flash": SubResource("Animation_nmpwc")
}

[node name="Piece" type="Button"]
custom_minimum_size = Vector2(80, 80)
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
theme_type_variation = &"HiddenButton"
script = ExtResource("1_34xuo")

[node name="CTooltip" type="Node" parent="."]
script = ExtResource("2_wc04y")
label = "jack the ooze"

[node name="Sprite" type="Node2D" parent="."]
position = Vector2(40, 40)

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = -12.0
offset_right = 75.0
offset_bottom = 1.0
value = 100.0
texture_under = ExtResource("10_axav6")
texture_progress = ExtResource("11_lfhmi")
texture_progress_offset = Vector2(2, 2)

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = -13.0
offset_right = 44.5
offset_bottom = 12.0
grow_horizontal = 2
mouse_filter = 0
theme_override_fonts/font = ExtResource("12_y2i7d")
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CWikiLink" type="Node" parent="HealthBar/Label"]
script = ExtResource("13_0urni")
file = "res://wiki/combat/health.md"

[node name="ActionPoints" type="TextureProgressBar" parent="."]
texture_repeat = 2
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = 20.0
offset_right = 10.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
max_value = 3.0
value = 2.0
nine_patch_stretch = true
stretch_margin_left = 20
texture_under = ExtResource("13_6k2o5")
texture_progress = ExtResource("13_ytyrs")

[node name="CWikiLink" type="Node" parent="ActionPoints"]
script = ExtResource("13_0urni")
file = "res://wiki/combat/action_points.md"

[node name="SelectionMarker" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -10.0
offset_top = -45.0
offset_right = 10.0
offset_bottom = -25.0
grow_horizontal = 2
texture = ExtResource("9_kf0ku")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SelectionMarker"]
libraries = {
"": SubResource("AnimationLibrary_kiqkk")
}

[connection signal="pressed" from="." to="." method="_on_pressed"]
